@@ -1,5 +1,16 @@
 2007-05-12  Alan Modra  <amodra@bigpond.net.au>
 
+	PR 4497
+	* elf-eh-frame.c (struct cie): Add "local_personality".  Make
+	"personality" a union.
+	(cie_eq): Compare local_personality too.  Adjust personality
+	comparison.
+	(_bfd_elf_discard_section_eh_frame): Check binding on personality
+	reloc sym to allow for bad symtab.  Use stashed local syms rather
+	than reading personality local sym.  Handle discarded sections.
+
+2007-05-12  Alan Modra  <amodra@bigpond.net.au>
+
 	* elf32-spu.c (elf_howto_table): Add howto for R_SPU_ADDR16X.
 
 2007-05-11  Alan Modra  <amodra@bigpond.net.au>
